working on gathering facts and group_vars.   Need this to be common to my testing and teaching cluster.

--- a/farms/farm.8
+++ b/farms/farm.8
@@ -1,10 +1,11 @@
-[workers]
+[raspifarm-workers]
 192.168.2.102 host_name=pi-102
 192.168.2.103 host_name=pi-103
 192.168.2.104 host_name=pi-104
 192.168.2.105 host_name=pi-105
 192.168.2.106 host_name=pi-106
+
 #192.168.2.107 host_name=pi-107
 
-[farmer]
+[raspifarm-master]
 localhost host_name=pi-farmer
