--- a/farms/farm.4
+++ b/farms/farm.4
@@ -1,8 +1,8 @@
-[raspifarm-workers]
+[workers]
 192.168.3.200 host_name=worker-1
 192.168.3.201 host_name=worker-2
 192.168.3.203 host_name=worker-3
 
 
-[raspifarm-master]
+[master]
 localhost host_name=pi-farmer
