--- a/farms/farm.8
+++ b/farms/farm.8
@@ -1,11 +1,14 @@
-[raspifarm-workers]
+[workers]
 192.168.2.102 host_name=pi-102
 192.168.2.103 host_name=pi-103
 192.168.2.104 host_name=pi-104
 192.168.2.105 host_name=pi-105
 192.168.2.106 host_name=pi-106
+192.168.2.107 host_name=pi-107
 
-#192.168.2.107 host_name=pi-107
-
-[raspifarm-master]
+[farmer]
 localhost host_name=pi-farmer
+
+[test]
+192.168.2.106 host_name=pi-106
+
